kubernetes/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
  - host: "http://129.146.5.240"
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 5000
